--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ h2, h3 {
 }
 body {
   margin: 2em;
-  background-image: url('images/bg-body.jpg');
+  background: url('images/bg-body.jpg') top right no-repeat; 
+  background-attachment: fixed;
 }
 body, input[text], button {
   color: #888;
