--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h2, h3 {
 }
 body {
   margin: 2em;
-  background: url('images/bg-body.jpg') top right no-repeat; 
+  background: url('images/bg-body.jpg') top right no-repeat;
   background-attachment: fixed;
 }
 body, input[text], button {
@@ -136,6 +136,14 @@ nav a.router-link-active {
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+}
+
+.solid {
+  opacity: 1;
+}
+
+.semi-transparent {
+  opacity: 0.7;
 }
 
 /* everywhere else */
