changed info icon

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,6 +19,6 @@
     </a>
     <ul>
         <li><span class="btn-floating brown" (click)="setPage('main')"><i class="material-icons amber-text lighten-3">loop</i></span></li>
-        <li><span class="btn-floating brown" (click)="setPage('about')"><i class="material-icons amber-text lighten-3">info_outline</i></span></li>
+        <li><span class="btn-floating brown" (click)="setPage('about')"><i class="material-icons amber-text lighten-3">info</i></span></li>
     </ul>
 </div>
