--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -1,5 +1,9 @@
-<img src="http://lorempixel.com/186/186/nature/1" class="responsive-img">
-<img src="http://lorempixel.com/186/186/nature/2" class="responsive-img">
-<img src="http://lorempixel.com/186/186/nature/3" class="responsive-img">
-<img src="http://lorempixel.com/186/186/nature/4" class="responsive-img">
-<img src="http://lorempixel.com/186/186/nature/5" class="responsive-img">
+<div class="row container">
+    <div class="card-panel amber lighten-3 z-depth-3 semi-transparent">
+        <img src="http://lorempixel.com/186/186/nature/1" class="responsive-img">
+        <img src="http://lorempixel.com/186/186/nature/2" class="responsive-img">
+        <img src="http://lorempixel.com/186/186/nature/3" class="responsive-img">
+        <img src="http://lorempixel.com/186/186/nature/4" class="responsive-img">
+        <img src="http://lorempixel.com/186/186/nature/5" class="responsive-img">
+    </div>
+</div>
