--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,2 +1,6 @@
-<p class="flow-text brown-text solid">Dreamcatcher actually keytar deep v church-key. Meditation celiac cardigan cred. Fingerstache brunch artisan cliche hammock, +1 four dollar toast art party gochujang kinfolk whatever franzen truffaut cronut salvia. Flannel biodiesel authentic intelligentsia knausgaard photo booth distillery austin. Portland meggings keytar, brunch knausgaard small batch blog skateboard readymade post-ironic four dollar toast fanny pack. Austin 8-bit photo booth direct trade vegan trust fund. Neutra intelligentsia butcher, readymade 90's street art gentrify lo-fi vice biodiesel pickled.</p>
-<p class="flow-text brown-text solid">Kale chips marfa tattooed brooklyn, VHS lomo heirloom deep v 3 wolf moon vinyl. Crucifix everyday carry truffaut heirloom, aesthetic neutra waistcoat tofu +1 shabby chic offal salvia. Crucifix godard bicycle rights four dollar toast post-ironic. Try-hard tousled skateboard drinking vinegar paleo mustache fap, artisan offal kickstarter ugh flannel mixtape. Chia flexitarian cardigan trust fund, XOXO gochujang franzen swag 3 wolf moon mixtape YOLO slow-carb. Beard ethical gluten-free, celiac chicharrones authentic heirloom austin pour-over helvetica actually shabby chic marfa forage keffiyeh. Drinking vinegar letterpress blog locavore flexitarian, pitchfork single-origin coffee.</p>
+<div class="row container">
+    <div class="card-panel amber lighten-3 z-depth-3 semi-transparent">
+        <p class="flow-text brown-text solid">You're sure to love our collection of vintage glassware, toys, and children's clothing!</p>
+        <p class="flow-text brown-text solid">Watch this space for more.</p>
+    </div>
+</div>
