--- a/templates/main.html
+++ b/templates/main.html
@@ -1,22 +1,20 @@
-<div class="row container">
-    <div [ngSwitch]="page" class="card-panel amber lighten-3 z-depth-3 semi-transparent">
-        <!-- About page -->
-        <span *ngSwitchWhen="'about'" class="flow-text brown-text">
-            <aboutpage></aboutpage>
-        </span>
-        <!-- Home page -->
-        <span *ngSwitchDefault class="flow-text brown-text">
-            <homepage></homepage>
-        </span>
-    </div>
+<div [ngSwitch]="page">
+    <!-- About page -->
+    <span *ngSwitchWhen="'about'">
+        <aboutpage></aboutpage>
+    </span>
+    <!-- Home page (default) -->
+    <span *ngSwitchDefault>
+        <homepage></homepage>
+    </span>
 </div>
 <!-- Button Menu -->
 <div class="fixed-action-btn click-to-toggle" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large brown">
-        <i class="large material-icons amber-text lighten-3">list</i>
+        <i class="large material-icons amber-text lighten-3">reorder</i>
     </a>
     <ul>
-        <li><span class="btn-floating brown" (click)="setPage('main')"><i class="material-icons amber-text lighten-3">loop</i></span></li>
+        <li><span class="btn-floating brown" (click)="setPage('home')"><i class="material-icons amber-text lighten-3">loop</i></span></li>
         <li><span class="btn-floating brown" (click)="setPage('about')"><i class="material-icons amber-text lighten-3">info</i></span></li>
     </ul>
 </div>
