--- a/templates/main.html
+++ b/templates/main.html
@@ -11,10 +11,10 @@
 <!-- Button Menu -->
 <div class="fixed-action-btn click-to-toggle" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large brown">
-        <i class="large material-icons amber-text lighten-3">reorder</i>
+        <i class="large material-icons amber-text lighten-3">menu</i>
     </a>
     <ul>
-        <li><span class="btn-floating brown" (click)="setPage('home')"><i class="material-icons amber-text lighten-3">loop</i></span></li>
+        <li><span class="btn-floating brown" (click)="setPage('home')"><i class="material-icons amber-text lighten-3">first_page</i></span></li>
         <li><span class="btn-floating brown" (click)="setPage('about')"><i class="material-icons amber-text lighten-3">info</i></span></li>
     </ul>
 </div>
