--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -1,9 +1,18 @@
 <div class="row container">
     <div class="card-panel amber lighten-3 z-depth-3 semi-transparent">
-        <img src="http://lorempixel.com/186/186/nature/1" class="responsive-img">
-        <img src="http://lorempixel.com/186/186/nature/2" class="responsive-img">
-        <img src="http://lorempixel.com/186/186/nature/3" class="responsive-img">
-        <img src="http://lorempixel.com/186/186/nature/4" class="responsive-img">
-        <img src="http://lorempixel.com/186/186/nature/5" class="responsive-img">
+        <div class="carousel">
+            <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/1"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/2"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/3"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/4"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/5"></a>
+        </div>
+        <div class="carousel carousel-slider">
+            <a class="carousel-item"><img src="http://lorempixel.com/800/400/food/1"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/800/400/food/2"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/800/400/food/3"></a>
+            <a class="carousel-item"><img src="http://lorempixel.com/800/400/food/4"></a>
+        </div>
+        <p class="flow-text brown-text solid">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 </div>
