--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -1,5 +1,5 @@
 <div class="row container">
-    <div class="card-panel amber lighten-3 z-depth-3 semi-transparent">
+    <div class="card-panel amber lighten-5 z-depth-3">
         <div class="carousel">
             <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/1"></a>
             <a class="carousel-item"><img src="http://lorempixel.com/250/250/nature/2"></a>
