--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,35 +1,37 @@
 <div class="row container">
-    <div class="card-panel amber lighten-3 z-depth-3 semi-transparent">
+    <div class="card-panel amber lighten-5 z-depth-3">
         <div class="slider">
           <ul class="slides">
             <li>
-              <img src="http://lorempixel.com/580/250/nature/1"> <!-- random image -->
+              <img src="images/depression-glass.png">
               <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3 class="cursive">Depression Glass</h3>
               </div>
             </li>
+            <!--
             <li>
-              <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+              <img src="http://lorempixel.com/580/250/nature/2">
               <div class="caption left-align">
                 <h3>Left Aligned Caption</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
               </div>
             </li>
+            -->
             <li>
-              <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
+              <img src="images/vintage-glassware.png">
               <div class="caption right-align">
-                <h3>Right Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3 class="cursive white-text">Vintage Glassware</h3>
               </div>
             </li>
+            <!--
             <li>
-              <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
+              <img src="http://lorempixel.com/580/250/nature/4">
               <div class="caption center-align">
                 <h3>This is our big Tagline!</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
               </div>
             </li>
+            -->
           </ul>
         </div>
         <p class="flow-text brown-text solid">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
