--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
 <!-- Button Menu -->
 <div class="fixed-action-btn click-to-toggle horizontal" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large brown">
-        <i class="large material-icons amber-text lighten-3">menu</i>
+        <i class="large material-icons white-text">menu</i>
     </a>
     <ul>
         <li>
