changed hero slider button color

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,14 @@ nav a.router-link-active {
   font-family: 'Satisfy', cursive;
 }
 
+.slider .indicators .indicator-item.active {
+  background-color: #795548 !important;
+}
+
+.slider .indicators .indicator-item {
+  background-color: #FFFFFF !important;
+}
+
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
