some color tweaking

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
             <li>
               <img src="images/depression-glass.png">
               <div class="caption center-align">
-                <h3 class="cursive">Depression Glass</h3>
+                <h3 class="cursive black-text">Depression Glass</h3>
               </div>
             </li>
             <!--
