removed unused images

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,25 @@
         <homepage></homepage>
     </span>
 </div>
+<!-- Social Media -->
+<div class="row container">
+    <div class="card-panel amber lighten-5 z-depth-3">
+        <span class="flow-text brown-text">
+            Follow us on
+        </span>
+        <br /><br />
+        <!-- Instagram -->
+        <div class="chip white brown-text">
+            <img src="images/insta.ico" alt="I" />
+            Instagram
+        </div>
+        <!-- Twitter -->
+        <div class="chip white brown-text">
+            <img src="images/twitter.ico" alt="T" />
+            Twitter
+        </div>
+    </div>
+</div>
 <!-- Button Menu -->
 <div class="fixed-action-btn click-to-toggle horizontal" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large brown">
