added a third slider image

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,20 +2,26 @@
     <div class="card-panel amber lighten-5 z-depth-3">
         <div class="slider">
           <ul class="slides">
-            <li>
-              <img src="images/depression-glass.png">
-              <div class="caption center-align">
-                <h3 class="cursive black-text">Depression Glass</h3>
-              </div>
-            </li>
-            <li>
-              <img src="images/vintage-glassware.png">
-              <div class="caption right-align">
-                <h3 class="cursive white-text">Vintage Glassware</h3>
-              </div>
-            </li>
+              <li>
+                  <img src="images/depression-glass.png">
+                  <div class="caption center-align">
+                      <h3 class="cursive black-text">Depression Glass</h3>
+                  </div>
+              </li>
+              <li>
+                  <img src="images/vintage-glassware.png">
+                  <div class="caption right-align">
+                      <h3 class="cursive white-text">Vintage Glassware</h3>
+                  </div>
+              </li>
+              <li>
+                  <img src="images/vintage-toys.png">
+                  <div class="caption center-align">
+                      <h3 class="cursive black-text">Classic Toys</h3>
+                  </div>
+              </li>
           </ul>
-        </div>
-        <p class="flow-text brown-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+      </div>
+      <p class="flow-text brown-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
 </div>
