--- a/templates/main.html
+++ b/templates/main.html
@@ -17,13 +17,10 @@
         <br /><br />
         <!-- Instagram -->
         <div class="chip white brown-text">
-            <img src="images/insta.ico" alt="I" />
-            Instagram
-        </div>
-        <!-- Twitter -->
-        <div class="chip white brown-text">
-            <img src="images/twitter.ico" alt="T" />
-            Twitter
+            <a target="_blank" href="https://www.instagram.com/reminisceanddelight/">
+                <img src="images/insta.ico" alt="I" />
+                Instagram
+            </a>
         </div>
     </div>
 </div>
