brown text for instagram icon

--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
         <br /><br />
         <!-- Instagram -->
         <div class="chip white brown-text">
-            <a target="_blank" href="https://www.instagram.com/reminisceanddelight/">
+            <a target="_blank" href="https://www.instagram.com/reminisceanddelight/" class="brown-text">
                 <img src="images/insta.ico" alt="I" />
                 Instagram
             </a>
