added link to shop

--- a/templates/main.html
+++ b/templates/main.html
@@ -36,5 +36,8 @@
         <li>
             <a class="waves-effect waves-light btn brown" (click)="setPage('about')">About</a>
         </li>
+        <li>
+            <a class="waves-effect waves-light btn brown" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight">Shop</a>
+        </li>
     </ul>
 </div>
