--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -1,5 +1,5 @@
 <div class="row container">
     <div class="card-panel amber lighten-5 z-depth-3">
-        <p class="flow-text brown-text solid">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="flow-text brown-text solid">I love the process of finding quality vintage items, and I hope one of my finds will inspire you to reminisce and delight!</p>
     </div>
 </div>
