added actual About

--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -1,5 +1,5 @@
 <div class="row container">
     <div class="card-panel amber lighten-5 z-depth-3">
-        <p class="flow-text brown-text solid">I love the process of finding quality vintage items, and I hope one of my finds will inspire you to reminisce and delight!</p>
+        <p class="flow-text brown-text solid">I love the process of finding quality vintage treasures, and I hope one of my finds will inspire you to reminisce and delight!</p>
     </div>
 </div>
