added actual About

--- a/templates/main.html
+++ b/templates/main.html
@@ -31,13 +31,16 @@
     </a>
     <ul>
         <li>
-            <a class="waves-effect waves-light btn brown" (click)="setPage('home')">Home</a>
+            <a class="waves-effect waves-light btn brown hide-on-small-only" (click)="setPage('home')">Home</a>
+            <a class="btn-floating brown hide-on-med-and-up" (click)="setPage('home')"><i class="material-icons">home</i></a>
         </li>
         <li>
-            <a class="waves-effect waves-light btn brown" (click)="setPage('about')">About</a>
+            <a class="waves-effect waves-light btn brown hide-on-small-only" (click)="setPage('about')">About</a>
+            <a class="btn-floating brown hide-on-med-and-up" (click)="setPage('about')"><i class="material-icons">info</i></a>
         </li>
         <li>
-            <a class="waves-effect waves-light btn brown" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight">Shop</a>
+            <a class="waves-effect waves-light btn brown hide-on-small-only" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight">Shop</a>
+            <a class="btn-floating brown hide-on-med-and-up" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight"><i class="material-icons">shop</i></a>
         </li>
     </ul>
 </div>
