added email icon

--- a/templates/main.html
+++ b/templates/main.html
@@ -11,15 +11,18 @@
 <!-- Social Media -->
 <div class="row container">
     <div class="card-panel amber lighten-5 z-depth-3">
-        <span class="flow-text brown-text">
-            Follow us on
-        </span>
-        <br /><br />
         <!-- Instagram -->
         <div class="chip white brown-text">
             <a target="_blank" href="https://www.instagram.com/reminisceanddelight/" class="brown-text">
                 <img src="images/insta.ico" alt="I" />
                 Instagram
+            </a>
+        </div>
+        <!-- Email -->
+        <div class="chip white brown-text">
+            <a target="_blank" href="mailto:reminisceanddelight@gmail.com" class="brown-text">
+                <i class="left material-icons">email</i>
+                Email
             </a>
         </div>
     </div>
