--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,6 +20,12 @@
                       <h3 class="cursive black-text">Classic Toys</h3>
                   </div>
               </li>
+              <li>
+                  <img src="images/vintage-childrens-clothing.png">
+                  <div class="caption left-align">
+                      <h3 class="cursive white-text">Vintage Childrens' Clothing</h3>
+                  </div>
+              </li>
           </ul>
       </div>
   </div>
