--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,7 +23,7 @@
               <li>
                   <img src="images/vintage-childrens-clothing.png">
                   <div class="caption left-align">
-                      <h3 class="cursive white-text">Vintage Childrens' Clothing</h3>
+                      <h3 class="cursive white-text">Vintage Children's Clothing</h3>
                   </div>
               </li>
           </ul>
