--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,30 +2,7 @@
     <div class="card-panel amber lighten-5 z-depth-3">
         <div class="slider">
           <ul class="slides">
-              <li>
-                  <img src="images/depression-glass.png">
-                  <div class="caption center-align">
-                      <h3 class="cursive black-text">Depression Glass</h3>
-                  </div>
-              </li>
-              <li>
-                  <img src="images/vintage-glassware.png">
-                  <div class="caption right-align">
-                      <h3 class="cursive white-text">Vintage Glassware</h3>
-                  </div>
-              </li>
-              <li>
-                  <img src="images/vintage-toys.png">
-                  <div class="caption center-align">
-                      <h3 class="cursive black-text">Classic Toys</h3>
-                  </div>
-              </li>
-              <li>
-                  <img src="images/vintage-childrens-clothing.png">
-                  <div class="caption left-align">
-                      <h3 class="cursive white-text">Vintage Children's Clothing</h3>
-                  </div>
-              </li>
+              <slider></slider>
           </ul>
       </div>
   </div>
