added lazy loading to background

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url('images/bg-body.jpg') top right no-repeat;
+  background: url('images/grey.gif') top right no-repeat;
   background-attachment: fixed;
 }
 
