--- a/templates/main.html
+++ b/templates/main.html
@@ -41,7 +41,10 @@
             <a class="btn-floating brown" (click)="setPage('about')"><i class="material-icons">info</i></a>
         </li>
         <li>
-            <a class="btn-floating brown" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight"><i class="material-icons">shop</i></a>
+            <a class="btn-floating brown" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight">Etsy</a>
+        </li>
+        <li>
+            <a class="btn-floating brown" target="_blank" href="http://stores.ebay.com/reminisceanddelight">Ebay</a>
         </li>
     </ul>
 </div>
@@ -58,7 +61,10 @@
             <a class="waves-effect waves-light btn brown" (click)="setPage('about')">About</a>
         </li>
         <li>
-            <a class="waves-effect waves-light btn brown" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight">Shop</a>
+            <a class="waves-effect waves-light btn brown" target="_blank" href="https://www.etsy.com/shop/reminisceanddelight">Etsy</a>
+        </li>
+        <li>
+            <a class="waves-effect waves-light btn brown" target="_blank" href="http://stores.ebay.com/reminisceanddelight">Ebay</a>
         </li>
     </ul>
 </div>
